--- a/Sepuluh Nopember’s Adventure/Sepuluh Nopember’s Adventure/Resource.resx
+++ b/Sepuluh Nopember’s Adventure/Sepuluh Nopember’s Adventure/Resource.resx
@@ -121,6 +121,9 @@
   <data name="npc" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Generic Male NPCs.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="stage_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\map3.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="stage_final" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\map1.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -128,12 +131,9 @@
     <value>Resources\map2.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="star" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\star.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Resources\star.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="user_male" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\rpg_sprite_walk.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="star" type="System.Resources.ResXFileRef, System.Windows.Forms">
-  <value>Resources\star.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-</data>
 </root>
